fix alignment for card-type-container

--- a/frontend/src/HomePage.css
+++ b/frontend/src/HomePage.css
@@ -137,7 +137,7 @@
     border-radius: 0.5rem;
 }
 
-.card-info, .card-redirect {
+.card-info {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -163,6 +163,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
 }
 
@@ -186,7 +187,7 @@
     font-size: 2rem;
 }
 
-.search-result-container{
+.search-result-container {
     display: flex;
     flex-direction: column;
     align-items: center;
